# object-recongition

./: .gitlab-ci.yml  LICENSE.txt  README.md  docker-compose.yml  raspberrypi.sh
bundler/: Dockerfile
bundler/webservice/: index.js  make_3d.sh  package.json
camera/webservice/: index.js  package-lock.json  package.json
cloudcompare/: Dockerfile
cloudcompare/webservice/: do_cloudcompare.sh  index.js  object.ply  package-lock.json  package.json
coordsmapping/: Dockerfile
coordsmapping/webservice/: experiment.js  experimentOptimizedCg.js  findpoint.js  index.js  map.js  package-lock.json  package.json  pcd.js  test.js
omarpadierna/: Dockerfile
omarpadierna/webservice/: index.js  make_3d.sh
pcl/: Dockerfile
pcl/webservice/: .gitignore  CMakeLists.txt  baselinealgo.js  converter.cpp  correspondence_grouping.cpp  cuboid5000.pcd  index.js  mesh2pcd.cpp  package-lock.json  package.json  pcd.js  scene45deg_cutfloor.pcd  scene45deg_cutfloor2.pcd  template_alignment.cpp  templates.txt  test.js
pcl/webservice/example_models/: cuboid5000.pcd  cuboid5000x90.pcd  cylinder5000.pcd  model5000.pcd  ring5000x90.pcd
pcl/webservice/example_models/not_centralized/: cuboid5000.pcd  ring5000.pcd
processengine/: app.html  app.js  bpm.css  bpm.js  executor.js  index.html  menu.css
processengine/css/: app.css  bpm.css  dashboard.css  editor.css  menu.css
processengine/libs/: jquery-binary-data.js
processengine/templates/: bpmn.html  dashboard.html  editor.html  (+2 more)
r2n2/: Dockerfile  README.md  magic.py
realsense/: .gitignore  Dockerfile  README.md
robot/: Dockerfile
(+37 files in other folders)
